--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.9.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add field `is_advertorial` to Cardstack. (DEV-892)
 
 
 3.9.0 (2015-08-27)
