--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.9.4 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.9.3 (2015-09-11)
 ------------------
 
