--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.10.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.10.0 (2015-09-12)
 -------------------
 
