--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 zeit.content.article changes
 ============================
 
-3.10.2 (unreleased)
+3.11.0 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Add block for referencing a quiz (ZON-2396).
 
 
 3.10.1 (2015-10-29)
