--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.11.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.11.0 (2015-11-12)
 -------------------
 
