--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 zeit.content.article changes
 ============================
 
-3.11.1 (unreleased)
+3.12.0 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Add fields ``is_instant_article`` and ``is_amp`` (ZON-2476)
 
 
 3.11.0 (2015-11-12)
