--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.12.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Update to zeit.push separating facebook texts (ZON-2397).
 
 
 3.12.1 (2015-12-16)
