--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.12.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Replace gocept.cache.method with dogpile.cache (ZON-2576).
 
 
 3.12.2 (2015-12-17)
