--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.12.4 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.12.3 (2016-01-20)
 -------------------
 
