--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.12.4 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Improve styling of social media form.
 
 
 3.12.3 (2016-01-20)
